--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Logs</title>
+    <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
@@ -12,7 +13,7 @@
         <h2>Logs</h2>
     <div id="new-log-container">
       <form id="new-log-form">
-          <input type="text"/>
+          <input type="text" name="log-body" id="nre-log-body"/>
           <input type="submit"/>
       </form>
      </div>
