--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -13,15 +13,22 @@
         <h2>Logs</h2>
     <div id="new-log-container">
       <form id="new-log-form">
-          <input type="text" name="log-body" id="nre-log-body"/>
-          <input type="submit"/>
+          <input type="text" name="log-body" id="new-log-body"/>
+          <input type="submit" value="Log"/>
       </form>
      </div>
-    <div id="logs-container">
-
+     <div id="logs-content">
+      <div id="logs-container">
+    
+     </div>
+     </div id="log-show">
+     
+     </div>
     </div>
-</div>
+    </div>
+  </div>
 <!-- loads components -->
+    <script type="text/javascript" src="src/components/log.js"></script>
     <script src="src/components/logs.js"></script>
     <script src="src/components/app.js"></script>
     <script src="src/adapters/LogsAdapter.js"></script>
