--- a/js-frontend/index.html
+++ b/js-frontend/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Logs</title>
+    <title>Logs</title> 
     <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
     <div class="container">
-        <h2>Logs</h2>
+        <h2>Log</h2> <p id="number"></p> logs
+       
     <div id="new-log-container">
       <form id="new-log-form">
           <input type="text" name="log-body" id="new-log-body"/>
