--- a/frontend/home.html
+++ b/frontend/home.html
@@ -33,7 +33,7 @@
        <button onclick="EditSubjectFunction()">Edit Subject</button></div>
      
 
-       <form>  <select id="container" size="15" ></select></form>
+       <form>  <select onclick="onContainerClick()" id="container" size="15" ></select></form>
 
 
   
