added more comments

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -19,7 +19,7 @@
   <button id="subjectButton" onclick="addSubjectFunction()">Add Subject</button>
   <button id="btnRemove">Remove Subject</button>
 
-  <div>Note</div> <input size="40" placeholder="Enter CC Here" autocomplete="off" type="text" name="cc" width="100"
+  <div>CC</div> <input size="40" placeholder="Enter CC Here" autocomplete="off" type="text" name="cc" width="100"
     height="200" id="cc-body" />
   <button id="ccButton" onclick="addCCFunction()">Add CC</button>
   <button id="ccButtonOpen" onclick="openCCFunction()">Open CC</button>
