--- a/frontend/home.html
+++ b/frontend/home.html
@@ -23,7 +23,7 @@
     height="200" id="cc-body" />
   <button id="ccButton" onclick="addCCFunction()">Add CC</button>
   <button id="ccButtonOpen" onclick="openCCFunction()">Open CC</button>
-
+  <button id="Org" onclick="orgFunction()">Org</button>
   <div>Edit</div> <input size="40" placeholder="Edit Subject Name Here" autocomplete="off" type="text"
     name="edit-subject-title" id="edit-subject-body" />
   <button onclick="EditSubjectFunction()">Edit Subject</button>
@@ -37,8 +37,8 @@
 
 <script src="src/components/home.js"></script>
 <script src="src/components/tools.js"></script>
-<script src="src/adapters/SubjectsAdapter.js"></script>
-<script src="src/adapters/NotesAdapter.js"></script>
+<script src="src/classes/Subjects.js"></script>
+<script src="src/classes/Notes.js"></script>
 </body>
 
 </html>
